--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -969,7 +969,6 @@
       <p>
         <h5>My Activities</h5>
           <p>
-            Security+ <br><br>
             <a href="https://tryhackme.com/room/redteamfundamentals" target="_blank">Red Team Fundamentals</a> : TryHackMe <br><br>
             <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">BTRSys2.1</a> : Offensive Security Proving Grounds (Play) <br><br>
             <a href="https://app.hackthebox.com/machines/222" target="_blank">OpenAdmin</a> : HackTheBox <br><br>
@@ -990,6 +989,7 @@
       <p>
         <h5>My Activities</h5>
           <p>
+            Security+ <br><br>
             <a href="https://tryhackme.com/room/investigatingwindows" target="_blank">Investiation Windows</a> : TryHackMe <br><br>
             <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">My-CMSMS</a> : Offensive Security Proving Grounds (Play) <br><br>
             <a href="https://app.hackthebox.com/machines/64" target="_blank">Mirai</a> : HackTheBox <br><br>
@@ -1003,6 +1003,28 @@
             <a href="https://medium.com/@raymond-lind/how-i-found-a-simple-stored-xss-a2976c5251b" target="_blank">How I Found A Simple Stored XSS</a> : How I Found A Simple Stored XSS <br><br>
             <a href="https://medium.com/codex/bypass-file-upload-restrictions-f30c88e1fccb" target="_blank">Bypass File Upload Restrictions</a> : Surendra Choudhury <br><br>
             <a href="https://infosecwriteups.com/day-20-web-reconnaissance-or-information-gathering-part-5-100daysofhacking-5392d48233db" target="_blank">Day 20, Web Reconnaissance Or Information Gathering — Part 5#100DaysofHacking</a> Ayush Verma <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 42: Feb 10 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+ <br><br>
+            <a href="https://tryhackme.com/room/linuxserverforensics" target="_blank">Linux Server Forensics</a> : TryHackMe <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Assertion 101</a> : Offensive Security Proving Grounds (Play) <br><br>
+            <a href="https://app.hackthebox.com/machines/432" target="_blank">Paper</a> : HackTheBox <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/everything-you-need-to-know-about-clickjacking-a522b188f2fe" target="_blank">Everything you need to know about clickjacking</a> : Andrea <br><br>
+            <a href="https://medium.com/@kojodaprogrammer/full-account-takeover-ato-a-tale-of-two-bugs-d1b3765ff1de" target="_blank">Full Account takeover (ATO) — a tale of two bugs</a> : Kwadwo Amoako <br><br>
+            <a href="https://medium.com/@jr.mayank1999/rce-via-image-jpg-png-file-upload-8e4ad8a2100" target="_blank">Rce via Image (jpg,png) File Upload..!</a> : Un9nplayer <br><br>
+            <a href="https://infosecwriteups.com/server-side-request-forgery-to-internal-smtp-access-dea16fe37ed2" target="_blank">Server-Side Request Forgery to Internal SMTP Access</a> : Muh. Fani Akbar <br><br>
+            <a href="https://medium.com/@Hackfreaksofficial/traps-for-hackers-7392db131d81" target="_blank">Traps for Hackers</a> : Hackfreaksofficial <br><br>
+            <a href="https://hcibo.medium.com/my-pentest-log-5-f578e8d469fd" target="_blank">My Pentest Log -5-</a> : Hamit CİBO <br><br>
           </p>
         <br><br>
       </p>
