--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1029,6 +1029,26 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 43: Feb 11 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/bsidesgtdevelpy" target="_blank">Develpy</a> : TryHackMe <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Powergrid</a> : Offensive Security Proving Grounds (Play) <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@pritesh.gurjar2018/first-bug-bounty-program-found-cors-cross-origin-resource-sharing-misconfiguration-52c1bd3ebfe0" target="_blank">First Bug Bounty Program found CORS (Cross Origin Resource Sharing ) Misconfiguration</a> : Pritesh Gurjar <br><br>
+            <a href="https://medium.com/@vflexo/price-tampering-buying-t-shirts-at-2-inr-c1de378c803b" target="_blank">Price Tampering | Buying T-Shirts at 2 INR</a> : vFlexo <br><br>
+            <a href="https://noob3xploiter.medium.com/hacking-into-school-management-systems-reflected-xss-to-rce-74880c423024" target="_blank">Hacking into school management systems. Reflected XSS To RCE</a> : Brandon Roldan <br><br>
+            <a href="https://astroboy73.medium.com/100-days-of-hacking-f8746096de46" target="_blank">100 Days of Hacking — DAY 1</a> : Balaji Anbalagan <br><br>
+            <a href="https://aaryanapex.medium.com/2fa-bypass-techniques-dcdb19d29f11" target="_blank">2FA Bypass Techniques</a> : Aaryan <br><br>
+            <a href="https://7odamo.medium.com/sql-injection-reflected-xss-and-information-disclosure-in-one-subdomain-in-just-10-minutes-f2ce877b43d4" target="_blank">SQL Injection, Reflected XSS and Information Disclosure in one subdomain in just 10 minutes</a> : Mahmoud Hamed <br><br>            
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
