--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-
     <title>Aditya's Personal Site</title>
     <link rel="icon" href="/img/detective.png">
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" data-spy="affix" data-offset-top="197">
     <div class="container">
       <a class="navbar-brand" href="/">H🔍ME</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +51,7 @@
         <a class="btn btn-outline-light" href="/WebPages/AdityaDindiResume.pdf" role="button">MY RESUME</a>
       </div> 
       <hr>
-      <h1 id="work-exp">PROJECTS</h1> <br>
+      <h1 id="projects" style="color:DodgerBlue">PROJECTS</h1> <br>
       <small class="text-muted lead"><strong><!--<a href="/" class="text-decoration-none" target="_blank">-->Cyber Security Homelab</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="https://hackersarcade.medium.com/noobs-guide-to-web-application-penetration-testing-e3ae921d57d1" class="text-decoration-none" target="_blank">Web Application Hacking Guide</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="/" class="text-decoration-none" target="_blank">Personal Website</strong></a></small> <br><br>
@@ -63,7 +62,7 @@
       <br>
       <hr>
       <br>
-      <h1 id="projects" style="color:DodgerBlue">WORK EXPERIENCE</h1> <br>
+      <h1 id="work-exp" style="color:DodgerBlue">WORK EXPERIENCE</h1> <br>
       <p class="lead" style="color:red"><strong>(2021 - Current) Security Researcher at Hackers Arcade</strong></p>
       <p>
         Hackers Arcade is an online platform where you can learn about cyber security through excellent learning resources and challenges. 
@@ -78,7 +77,7 @@
       <br>
       <hr>
       <br>
-      <h1 id="skills">MY SKILLS</h1> <br>
+      <h1 id="skills" style="color:DodgerBlue">MY SKILLS</h1> <br>
       <p class="lead">Web Application Hacking</p>
       <p class="lead">Problem-Solving Skills</p>
       <p class="lead">Working in a Team</p>
