--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1049,6 +1049,24 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 44: Feb 12 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            Security+ : University Security+ Study Group Session <br><br>
+            <a href="https://tryhackme.com/room/sqlmap" target="_blank">SQLMAP</a> : TryHackMe <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+          <a href="https://infosecwriteups.com/massive-users-account-takeovers-chaining-vulnerabilities-to-idor-ea4e1b6407d2" target="_blank">Massive Users Account Takeovers(Chaining Vulnerabilities to IDOR)</a> : Anurag__Verma <br><br>
+          <a href="https://technoxi.medium.com/subdomain-takeover-41efa293b1b7" target="_blank">Subdomain Takeover</a> : TECHNOXI <br><br>
+          <a href="https://bhavikkanejiya.medium.com/lets-do-peek-inside-admin-s-dashboard-abuse-api-endpoint-c43387dc65bf" target="_blank">Let’s do a peek inside the admin’s dashboard: Abuse API endpoint</a> : Bhavik kanejiya <br><br>
+          <a href="https://infosecwriteups.com/day-22-cross-site-scripting-part-1-100daysofhacking-a9fe6d3a59c8" target="_blank">Day 22 Cross-Site Scripting — Part 1 #100DaysofHacking</a> : Ayush Verma <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
