--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1067,6 +1067,27 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 45: Feb 13 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/windowsfundamentals2x0x" target="_blank">Windows Fundaments 2</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/windowsforensics1" target="_blank">Windows Forensics 1</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/tracks/Beginner-Track" target="_blank">Beginner Track</a> : HackTheBox <br><br>
+            <a href="https://www.udemy.com/course/security-601-exams/" target="_blank">Security+</a> : Jason Dion <br><br> 
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@jyotiagarwal3190/vulnerable-api-vapi-writeup-ca462fe7c561" target="_blank">vulnerable API(vAPI) writeup</a> : Jyotiagarwal <br><br>
+            <a href="https://medium.com/@anmolbagul20/how-to-manually-exploit-sql-injection-f7353e877b13" target="_blank">How to manually exploit SQL Injection?</a> : Anmol Bagul <br><br>
+            <a href="https://medium.com/@jaadugar/sensitive-data-exposure-my-first-bug-in-h1-d4006a08d38f" target="_blank">Sensitive Data Exposure : My First Bug in H1</a> : RajKumar <br><br>
+            <a href="https://astroboy73.medium.com/100-days-of-hacking-day-8-aa28892c857e" target="_blank">100 Days of Hacking — Day 8</a> : Balaji Anbalagan <br><br>
+            <a href="https://3xabyt3.medium.com/day-23-hunting-for-xss-100daysofhacking-de0013042470" target="_blank">Day 23 Cross-Site Scripting - Part 2#100DaysofHacking</a> : Ayush Verma <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
