--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -49,8 +49,8 @@
               <div class="dropdown-content">
                 <a href="#week5">Week 5</a>
                 <a href="#week6">Week 6</a>
-                <!--
                 <a href="#week7">Link 7</a>
+                <!--
                 <a href="#week7">Link 8</a>
                 -->
               </div>
@@ -1084,6 +1084,48 @@
             <a href="https://medium.com/@jaadugar/sensitive-data-exposure-my-first-bug-in-h1-d4006a08d38f" target="_blank">Sensitive Data Exposure : My First Bug in H1</a> : RajKumar <br><br>
             <a href="https://astroboy73.medium.com/100-days-of-hacking-day-8-aa28892c857e" target="_blank">100 Days of Hacking — Day 8</a> : Balaji Anbalagan <br><br>
             <a href="https://3xabyt3.medium.com/day-23-hunting-for-xss-100daysofhacking-de0013042470" target="_blank">Day 23 Cross-Site Scripting - Part 2#100DaysofHacking</a> : Ayush Verma <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 46: Feb 14 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/windowsfundamentals3xzx" target="_blank">Windows Fundamentals 3</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/225" target="_blank">Nest</a> : HackTheBox <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Gitroot</a> : Offensive Security Proving Grounds (Play) <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://rootissh.in/most-popular-penetration-testing-tools-in-kali-unix-2eac887a16f8" target="_blank">MOST POPULAR PENETRATION TESTING TOOLS IN KALI UNIX</a> : rootissh <br><br>
+            <a href="https://medium.com/@kojodaprogrammer/hacking-the-margheriti-server-pwntilldawn-aec786aa1fde" target="_blank">Hacking the Margheriti-Server — PwntillDawn CTF</a> : Kwadwo Amoako <br><br>
+            <a href="https://musyokaian.medium.com/dear-qa-tryhackme-walkthrough-1c0a76326f8e" target="_blank">Dear QA TryHackMe Walkthrough</a> : Musyoka Ian <br><br>
+            <a href="https://astroboy73.medium.com/100-days-of-hacking-day-9-2e0b0732a6b" target="_blank">100 Days of Hacking - Day 9</a> : Balaji Anbalagan <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h2 id="week6">Week 6</h2> <br><br><br>
+      <h3>Day 47: Feb 15 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/bpsplunk" target="_blank">Splunk</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/tracks/Beginner-Track" target="_blank">Beginner Track</a> : HackTheBox <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">GlagowSmile</a> : Offensive Security Proving Grounds (Play) <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://systemweakness.com/the-devil-is-in-the-details-authentication-bypass-a4704ea73ce3" target="_blank">The devil is in the details — Authentication Bypass</a> : Taha <br><br>
+            <a href="https://shahjerry33.medium.com/broken-link-hijacking-mr-user-agent-cd124297f6e6" target="_blank">Broken Link Hijacking - Mr. User-Agent</a> : Jerry Shah (Jerry) <br><br>
+            <a href="https://infosecwriteups.com/a-tale-of-0-click-account-takeover-and-2fa-bypass-b369cd70e42f" target="_blank">A tale of 0-Click Account Takeover and 2FA Bypass.</a> : Firas Fatnassi <br><br>
+            <a href="https://astroboy73.medium.com/100-days-of-hacking-day-11-6b2af7fe3502" target="_blank">100 Days of Hacking - Day 11</a> : Balaji Anbalgan <br><br>
+            <a href="https://hacksouth.africa/careers/red-teaming-my-first-physical-assessment/" target="_blank">Red Teaming - My first physical assessment</a> : chrismeistre <br><br>
           </p>
         <br><br>
       </p>
