--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1116,7 +1116,6 @@
             <a href="https://tryhackme.com/room/bpsplunk" target="_blank">Splunk</a> : TryHackMe <br><br>
             <a href="https://app.hackthebox.com/tracks/Beginner-Track" target="_blank">Beginner Track</a> : HackTheBox <br><br>
             <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">GlagowSmile</a> : Offensive Security Proving Grounds (Play) <br><br>
-            Security+ <br><br>
           </p>
         <br><br> 
         <h5>Blogs Reads</h5>
@@ -1126,6 +1125,25 @@
             <a href="https://infosecwriteups.com/a-tale-of-0-click-account-takeover-and-2fa-bypass-b369cd70e42f" target="_blank">A tale of 0-Click Account Takeover and 2FA Bypass.</a> : Firas Fatnassi <br><br>
             <a href="https://astroboy73.medium.com/100-days-of-hacking-day-11-6b2af7fe3502" target="_blank">100 Days of Hacking - Day 11</a> : Balaji Anbalgan <br><br>
             <a href="https://hacksouth.africa/careers/red-teaming-my-first-physical-assessment/" target="_blank">Red Teaming - My first physical assessment</a> : chrismeistre <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 47: Feb 15 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/challenges/182" target="_blank">baby todo or not todo</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/room/bpsplunk">Splunk</a> : TryHackMe <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">GlagowSmile</a> : Offensive Security Proving Grounds (Play) <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://wraith0p.medium.com/portswigger-lab-web-shell-upload-via-content-type-restriction-bypass-walkthrough-da41c3ab97ad" target="_blank">PortSwigger Lab: Web shell upload via Content-Type restriction bypass | WalkThrough</a> : WraithOP <br><br>
+            <a href="https://medium.com/@turkishhoodie010/wireless-hacking-b6f4239b0b28" target="_blank">Wireless Hacking</a> : Ahmet Göker <br><br>
+            <a href="https://aaryanapex.medium.com/how-to-access-ransomware-sites-1d0e96a31611" target="_blank">How to access Ransomware sites?</a> Aaryan <br><br>
+            <a href="https://medium.com/@blublu9363/my-first-valid-bug-bounty-in-hackerone-program-and-my-first-500-bounty-ede120793a23" target="_blank">MY FIRST VALID BUG BOUNTY IN HACKERONE PROGRAM AND MY FIRST $500 BOUNTY</a> Blublue <br><br>
           </p>
         <br><br>
       </p>
