--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1148,6 +1148,29 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 49: Feb 17 2022</h3><br>
+      <p>
+        Break Day <br><br>
+      </p>
+      <br><br>
+      <h3>Day 50: Feb 18 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://www.ncaecybergames.org/" target="_blank">NCAE Cyber Games Training</a> <br><br>
+            <a href="https://tryhackme.com/room/cmspit" target="_blank">CMSpit</a> : TryHackMe <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://aaryanapex.medium.com/bug-bounty-bypassing-endpoints-55254df2cbff" target="_blank">Bug Bounty — Bypassing Endpoints</a> Aaryan <br><br>
+            <a href="https://sapt.medium.com/directory-listing-vulnerability-cyber-sapiens-internship-task-16-fca5c9a4bb8a" target="_blank">Directory Listing Vulnerability - Cyber Sapiens Internship Task-16</a> : Prajit Sindhkar <br><br>
+            <a href="https://aaryanapex.medium.com/top-10-api-bugs-where-to-find-them-5dac338b3d73" target="_blank">Top 10 API Bugs — Where To Find Them</a> Aaryan <br><br>
+            <a href="https://sapt.medium.com/no-rate-limiting-vulnerability-bypasses-cyber-sapiens-internship-task-17-bcf31d5d511c" target="_blank">No Rate Limiting Vulnerability & Bypasses - Cyber Sapiens Internship Task-17</a> : Prajit Sindhkar <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
