--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1171,6 +1171,27 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 50: Feb 18 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://www.ncaecybergames.org/" target="_blank">NCAE Cyber Games Training</a> <br><br>
+            Security+ : University Security+ Study Group Session <br><br>
+            <a href="https://www.nationalccdc.org/" target="_blank">CCDC Training</a> <br><br>
+            <a href="https://tryhackme.com/room/cmspit" target="_blank">CMSpit</a> : TryHackMe <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://sapt.medium.com/file-inclusion-vulnerabilities-cyber-sapiens-internship-task-19-d6e4b502cf83" target="_blank">File Inclusion Vulnerabilities - Cyber Sapiens Internship Task-19</a> : Prajit Sindhkar <br><br>
+            <a href="https://medium.com/@skavans_/my-first-five-figure-payout-e71c8a3648e2" target="_blank">Bug Bounty: My First Five Figure Payout</a> : Anton Subbotin (skavans) <br><br>
+            <a href="https://junoonbro.medium.com/how-i-earned-9000-with-privilege-escalations-b187d1f8f4fe" target="_blank">How I earned $9000 with Privilege escalations</a> : JunoonBro <br><br>
+            <a href="https://infosecwriteups.com/remote-code-execution-via-exif-data-12f7d3cee827" target="_blank">Remote Code Execution via Exif Data.</a> : Surendra Choudhury <br><br>
+            <a href="https://medium.com/@vishnurajr/403-forbidden-bypass-accessing-config-files-using-a-header-4bd172c25ff1" target="_blank">403 forbidden bypass & Accessing config files using a header</a> : ᴠɪꜱʜɴᴜʀᴀᴊʀ <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
