--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -49,7 +49,7 @@
               <div class="dropdown-content">
                 <a href="#week5">Week 5</a>
                 <a href="#week6">Week 6</a>
-                <a href="#week7">Link 7</a>
+                <a href="#week7">Week 7</a>
                 <!--
                 <a href="#week7">Link 8</a>
                 -->
@@ -1108,7 +1108,7 @@
         <br><br>
       </p>
       <br><br>
-      <h2 id="week6">Week 6</h2> <br><br><br>
+      <h2 id="week7">Week 7</h2> <br><br><br>
       <h3>Day 47: Feb 15 2022</h3><br>
       <p>
         <h5>My Activities</h5>
@@ -1188,6 +1188,28 @@
             <a href="https://junoonbro.medium.com/how-i-earned-9000-with-privilege-escalations-b187d1f8f4fe" target="_blank">How I earned $9000 with Privilege escalations</a> : JunoonBro <br><br>
             <a href="https://infosecwriteups.com/remote-code-execution-via-exif-data-12f7d3cee827" target="_blank">Remote Code Execution via Exif Data.</a> : Surendra Choudhury <br><br>
             <a href="https://medium.com/@vishnurajr/403-forbidden-bypass-accessing-config-files-using-a-header-4bd172c25ff1" target="_blank">403 forbidden bypass & Accessing config files using a header</a> : ᴠɪꜱʜɴᴜʀᴀᴊʀ <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 52: Feb 20 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://www.ncaecybergames.org/" target="_blank">NCAE Cyber Games Training</a> <br><br>
+            Security+ <br><br>
+            <a href="https://tryhackme.com/room/plottedtms" target="_blank">Plotted-TMS</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/challenges/177" target="_blank">Looking Glass</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/challenges/179" target="_blank">Baby Auth</a> : HackTheBox <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/how-i-take-over-the-managers-account-in-bus-booking-website-168c56430302" target="_blank">How I took over the Manager’s account in Bus Booking website.</a> : Ramalingasamy <br><br>
+            <a href="https://sapt.medium.com/insecure-direct-object-reference-cyber-sapiens-internship-task-18-986a5824c797" target="_blank">Insecure Direct Object Reference- Cyber Sapiens Internship Task-18</a> : Prajit Sindhkar <br><br>
+            <a href="https://medium.com/@chander.romesh/hacked-dutch-government-website-all-i-got-was-this-l%CC%B6o%CC%B6u%CC%B6s%CC%B6y%CC%B6-cool-t-shirt-4fd62ed3e734" target="_blank">Hacked Dutch Government Website. All I got was this l̶o̶u̶s̶y̶ cool T-Shirt.</a> : Romesh chander <br><br>
+            <a href="https://medium.com/@skavans_/bug-bounty-low-hanging-fruit-4ba92ec46f02" target="_blank">Bug Bounty: Low Hanging Fruit</a> : Anton Subbotin (skavans) <br><br>
+            <a href="https://medium.com/@kaorrosi/content-discovery-automated-and-manual-9984ba8d1da6" target="_blank">Content Discovery: Automated and Manual</a> : Kaorrosi <br><br>
           </p>
         <br><br>
       </p>
