--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1129,7 +1129,7 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 47: Feb 15 2022</h3><br>
+      <h3>Day 48: Feb 16 2022</h3><br>
       <p>
         <h5>My Activities</h5>
           <p>
@@ -1210,6 +1210,26 @@
             <a href="https://medium.com/@chander.romesh/hacked-dutch-government-website-all-i-got-was-this-l%CC%B6o%CC%B6u%CC%B6s%CC%B6y%CC%B6-cool-t-shirt-4fd62ed3e734" target="_blank">Hacked Dutch Government Website. All I got was this l̶o̶u̶s̶y̶ cool T-Shirt.</a> : Romesh chander <br><br>
             <a href="https://medium.com/@skavans_/bug-bounty-low-hanging-fruit-4ba92ec46f02" target="_blank">Bug Bounty: Low Hanging Fruit</a> : Anton Subbotin (skavans) <br><br>
             <a href="https://medium.com/@kaorrosi/content-discovery-automated-and-manual-9984ba8d1da6" target="_blank">Content Discovery: Automated and Manual</a> : Kaorrosi <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 53: Feb 21 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://www.ncaecybergames.org/" target="_blank">NCAE Cyber Games Training</a> <br><br>
+            <a href="https://app.hackthebox.com/machines/432" target="_blank">Paper</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/room/debug" target="_blank">Debug</a> : TryHackMe <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/walkthrough-hacktoria-geolocation-12-524acf91f8a3" target="_blank">Walkthrough — Hacktoria: Geolocation 12</a> : Sofia Santos <br><br>
+            <a href="https://medium.com/@9899akashgaikwad/everything-about-my-1st-bounty-f430929efc70" target="_blank">Everything about my 1st Bounty</a> : Akash Gaikwad <br><br>
+            <a href="https://theshubh77.medium.com/write-up-missing-rate-limiting-how-i-was-able-to-add-any-unowned-phone-number-to-my-fb-account-fe4d7e67cf10" target="_blank">[WRITE-UP] Missing rate-limiting. How I was able to add any unowned phone number to my Facebook account?</a> : Shubham Bhamare <br><br>
+            <a href="https://sudarshan-s.medium.com/how-to-manipulate-cookies-an-inforgraphic-for-hackers-1fabb3b6c29" target="_blank">HOW TO MANIPULATE COOKIES: AN INFORGRAPHIC FOR HACKERS</a> : Sudarshan S <br><br>
+            <a href="https://medium.com/@Arbaaz_Jamadar/subdomain-enumeration-and-techniques-ive-learned-about-ddde07775cc" target="_blank">Subdomain Enumeration and techniques i’ve learned about</a> : Arbaaz Jamadar <br><br>
           </p>
         <br><br>
       </p>
