--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1234,6 +1234,27 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 54: Feb 22 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            CCDC Meeting <br><br>
+            <a href="https://tryhackme.com/room/jrsecanalystintrouxo" target="_blank">Jr Security Analyst Intro</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/binaryheaven" target="_blank">Binary Heaven</a> : TryHackMe <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@jasonwiller/10-best-ethical-hacking-books-2022-edition-5a1f1a83695d" target="_blank">10 BEST Ethical Hacking Books [2022 Edition]</a> Jason Willer <br><br>
+            <a href="https://medium.com/@kashishcharaya/how-to-start-a-career-in-cyber-security-with-no-experience-in-2022-bccb6b143b25" target="_blank">How to start a career in Cyber Security with no experience in 2022</a> : Kashish Charaya <br><br>
+            <a href="https://fazalurrahman2005.medium.com/8-insecure-deserialization-security-basics-b6f541bf8262" target="_blank">#8 Insecure Deserialization — Security Basics</a> : Fazal <br><br>
+            <a href="https://medium.com/@harshbanshpal/stored-xss-blind-xss-html-injection-on-nasa-58ecf3e0ac23" target="_blank">Stored XSS & Blind XSS & HTML Injection on NASA</a> : Harsh Banshpal <br><br>
+            <a href="https://f4t7.medium.com/interesting-stored-xss-d741aabddb94" target="_blank">Interesting Stored XSS</a> : Faizan Elahi <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
