--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1255,6 +1255,26 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 55: Feb 23 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://www.ncaecybergames.org/" target="_blank">NCAE Cyber Games Training</a> <br><br>
+            <a href="https://tryhackme.com/room/harder" target="_blank">harder</a> : TryHackMe <br><br>
+            <a href="https://app.hackthebox.com/machines/111" target=_blank>Sense</a> : HackTheBox <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@friendly_/bypassing-cloudflares-waf-b1b83a50fb2f" target="_blank">Bypassing Cloudflare's WAF!</a> : Friendly <br><br>
+            <a href="https://f4t7.medium.com/xss-in-hidden-input-field-1b98a5fece26" target="_blank">XSS in hidden input field</a> Faizan Elahi <br><br>
+            <a href="https://medium.com/@janerowashington/the-methodology-of-system-hacking-5b8e64eef848" target="_blank">The Methodology of System Hacking</a> : Janero Washington <br><br>
+            <a href="https://medium.com/@Sm9l/the-most-underrated-tool-in-bug-bounty-and-the-filthiest-one-liner-possible-cab14ef7faeb" target="_blank">The most underrated tool in bug bounty. (and the filthiest one liner possible)</a> Sm9l <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
