--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -50,9 +50,7 @@
                 <a href="#week5">Week 5</a>
                 <a href="#week6">Week 6</a>
                 <a href="#week7">Week 7</a>
-                <!--
-                <a href="#week7">Link 8</a>
-                -->
+                <a href="#week8">Week 8</a>
               </div>
             </div>
           </li>
@@ -1271,6 +1269,29 @@
             <a href="https://f4t7.medium.com/xss-in-hidden-input-field-1b98a5fece26" target="_blank">XSS in hidden input field</a> Faizan Elahi <br><br>
             <a href="https://medium.com/@janerowashington/the-methodology-of-system-hacking-5b8e64eef848" target="_blank">The Methodology of System Hacking</a> : Janero Washington <br><br>
             <a href="https://medium.com/@Sm9l/the-most-underrated-tool-in-bug-bounty-and-the-filthiest-one-liner-possible-cab14ef7faeb" target="_blank">The most underrated tool in bug bounty. (and the filthiest one liner possible)</a> Sm9l <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h2 id="week8">Week 8</h2> <br><br><br>
+      <h3>Day 55: Feb 23 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/challenges/209" target="_blank">You Cant C Me</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/challenges/170" target="_blank">Reg</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/room/harder" target="_blank">harder</a> : TryHackMe <br><br>
+            <a href="https://www.ncaecybergames.org/" target="_blank">NCAE Cyber Games Training</a> <br><br>
+            CCDC Meeting <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://rei-hunt.medium.com/full-account-takeover-at0-a-tale-of-two-bugs-401ee3fb9619" target="_blank">Full account takeover(AT0)-A tale of two bugs</a> : rei_hunt <br><br>
+            <a href="https://infosecwriteups.com/day3-computer-networks-100daysofhacking-1f9734b80313" target="_blank">Day3, Computer Networks - 100DaysofHacking</a> : Ayush Verma <br><br>
+            <a href="https://medium.com/@interc3pt3r/my-first-bounty-and-how-i-got-it-a6dba459c652" target="_blank">My First Bounty and How Did I Get It?</a> : Aneesha D <br><br>
+            
           </p>
         <br><br>
       </p>
