--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1274,7 +1274,7 @@
       </p>
       <br><br>
       <h2 id="week8">Week 8</h2> <br><br><br>
-      <h3>Day 55: Feb 23 2022</h3><br>
+      <h3>Day 56: Feb 23 2022</h3><br>
       <p>
         <h5>My Activities</h5>
           <p>
@@ -1283,7 +1283,6 @@
             <a href="https://tryhackme.com/room/harder" target="_blank">harder</a> : TryHackMe <br><br>
             <a href="https://www.ncaecybergames.org/" target="_blank">NCAE Cyber Games Training</a> <br><br>
             CCDC Meeting <br><br>
-            Security+ <br><br>
           </p>
         <br><br> 
         <h5>Blogs Reads</h5>
@@ -1291,7 +1290,24 @@
             <a href="https://rei-hunt.medium.com/full-account-takeover-at0-a-tale-of-two-bugs-401ee3fb9619" target="_blank">Full account takeover(AT0)-A tale of two bugs</a> : rei_hunt <br><br>
             <a href="https://infosecwriteups.com/day3-computer-networks-100daysofhacking-1f9734b80313" target="_blank">Day3, Computer Networks - 100DaysofHacking</a> : Ayush Verma <br><br>
             <a href="https://medium.com/@interc3pt3r/my-first-bounty-and-how-i-got-it-a6dba459c652" target="_blank">My First Bounty and How Did I Get It?</a> : Aneesha D <br><br>
-            
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 57: Feb 24 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/malmalintroductory" target="_blank">MAL: Malware Introductory</a> : TryHackMNe <br><br>
+            <a href="https://www.ncaecybergames.org/" target="_blank">NCAE Cyber Games Training</a> <br><br>
+          </p>
+        <br><br> 
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@gathereisaac20/broken-access-control-overview-801602f03f00" target="_blank">Broken Access Control Overview</a> : Gathereisaac <br><br>
+            <a href="https://takshilp.medium.com/beginner-bug-bounty-guide-part-4-988e29f92643" target="_blank">Beginner Bug Bounty Guide - Part 4</a> : Takshil Patil <br><br>
+            <a href="https://medium.com/@Hackfreaksofficial/finding-someone-elses-passwords-on-google-5bb609bac4dc" target="_blank">Finding someone else’s passwords on Google</a> : Hackfreaksofficial <br><br>
+            <a href="https://medium.com/@Hackfreaksofficial/cobalt-strike-beginners-guide-1-part-af70e895602e" target="_blank">Cobalt Strike. Beginner’s Guide | 1 part</a> : Hackfreaksofficial <br><br>
           </p>
         <br><br>
       </p>
