--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -1274,7 +1274,7 @@
       </p>
       <br><br>
       <h2 id="week8">Week 8</h2> <br><br><br>
-      <h3>Day 56: Feb 23 2022</h3><br>
+      <h3>Day 56: Feb 24 2022</h3><br>
       <p>
         <h5>My Activities</h5>
           <p>
@@ -1294,7 +1294,7 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 57: Feb 24 2022</h3><br>
+      <h3>Day 57: Feb 25 2022</h3><br>
       <p>
         <h5>My Activities</h5>
           <p>
@@ -1308,6 +1308,31 @@
             <a href="https://takshilp.medium.com/beginner-bug-bounty-guide-part-4-988e29f92643" target="_blank">Beginner Bug Bounty Guide - Part 4</a> : Takshil Patil <br><br>
             <a href="https://medium.com/@Hackfreaksofficial/finding-someone-elses-passwords-on-google-5bb609bac4dc" target="_blank">Finding someone else’s passwords on Google</a> : Hackfreaksofficial <br><br>
             <a href="https://medium.com/@Hackfreaksofficial/cobalt-strike-beginners-guide-1-part-af70e895602e" target="_blank">Cobalt Strike. Beginner’s Guide | 1 part</a> : Hackfreaksofficial <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 58: Feb 26 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/challenges/157" target="_blank">Chase</a> : HackTheBox <br><br>
+            CCDC Meeting <br><br>
+            <a href="https://tryhackme.com/room/flatline" target="_blank">Flatline</a> : TryHackMe <br><br>
+          </p>
+        <br><br> 
+        <h5>Walkthrough Videos</h5>
+          <p>
+            <a href="https://www.youtube.com/watch?v=JQr_QKwk9Uk&list=WL&index=13&t=21s&ab_channel=BusraDemir" target="_blank">Reverse Engineering 101 - Introduction to IDA PRO: Reversing/Patching a Binary from crackmes.one</a> : Busra Demir <br><br>
+            <a href="https://www.youtube.com/watch?v=jrG1Gqatj7U&ab_channel=CryptoCat" target="_blank">1: Overwriting Variables on the Stack (pt 1) - Buffer Overflows - Intro to Binary Exploitation (Pwn)</a> : CryptoCat <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://systemweakness.com/zero-experience-to-oscp-certification-6-month-challenge-6904ec1cd6a0" target="_blank">Zero XP to OSCP: 6 Month Challenge.</a> : HackTheBridge <br><br>
+            <a href="https://hellfire0x01.medium.com/my-story-how-i-get-started-in-cyber-security-how-can-you-e7db00187f92" target="_blank">My story : How I get started in Cyber Security & How can you…</a> : Akshat Gupta <br><br>
+            <a href="https://infosecwriteups.com/my-journey-of-ejpt-fbef63ccda00" target="_blank">My Journey of eJPT</a> : Akshat Gupta <br><br>
+            <a href="https://medium.com/malware-buddy/my-top-books-to-learn-malware-analysis-and-reverse-engineering-2ae1c6e209b9" target="_blank">My Top Books to Learn Malware Analysis and Reverse Engineering</a> : Thomas Roccia <br><br>
           </p>
         <br><br>
       </p>
